gcp-gke/easy-recipes-yamls/easy-recipes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: easy-recipes
spec:
  selector:
    app: easy-recipes
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
