gcp-gke/easy-recipes-yamls/easy-recipes-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easy-recipes-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /categories
            pathType: Prefix
            backend:
              service:
                name: easy-recipes
                port:
                  number: 80
          - path: /info
            pathType: Prefix
            backend:
              service:
                name: spring-boot-service
                port:
                  number: 80
